--- a/src/pages/DetailItems/DetailItem.scss
+++ b/src/pages/DetailItems/DetailItem.scss
@@ -1,7 +1,7 @@
 .Container{
 
     .ContainerDetail{
-        margin-top: 100px;
+        margin-top: 120px;
         padding: 0 50px;
         display: flex;
         .Image img{
@@ -27,4 +27,10 @@
             }
         }
     }
+}
+.slider {
+    width: 67.5%;
+    height: 100%;
+    position: relative;
+    box-sizing: border-box;
 }
