--- a/src/App.scss
+++ b/src/App.scss
@@ -36,7 +36,7 @@
     font-weight: 400;
     overflow-x: hidden;
     position: relative;
-    background-color: black !important;
+    background-color: rgb(26, 26, 26) !important;
     color: #fff !important;
     font-family: 'Centra', sans-serif !important;
   }
