--- a/src/pages/UserLogin/Login/Login.module.css
+++ b/src/pages/UserLogin/Login/Login.module.css
@@ -36,7 +36,7 @@
 .footer button {
   outline: none;
   border: none;
-  background-color: #9900ff;
+  background-color: #0059ff;
   color: #fff;
   border-radius: 5px;
   font-weight: bold;
@@ -52,7 +52,7 @@
 }
 
 .footer button:hover {
-  background-color: #462aff;
+  background-color: #302095;
 }
 
 .footer p {
@@ -62,7 +62,7 @@
 
 .footer p span a {
   font-weight: bold;
-  color: #9900ff;
+  color: #4a84f7;
   letter-spacing: 1px;
   font-size: 1rem;
   text-decoration: none;
