--- a/src/App.scss
+++ b/src/App.scss
@@ -11,64 +11,78 @@
 //     color: white;
 // }
 .App {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+
+  .app_container {
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    .app_container {
-        width: 100%;
-        max-width: 1440px;
-        height: 100%;
-    }
+    max-width: 1440px;
+    height: 100%;
+  }
 }
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  html {
-    scroll-behavior: smooth;
-    scroll-padding-top: 75px;
-  }
-  
-  body {
-    font-weight: 400;
-    overflow-x: hidden;
-    position: relative;
-    background-color: rgb(26, 26, 26) !important;
-    color: #fff !important;
-    font-family: 'Centra', sans-serif !important;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    padding: 0;
-    line-height: normal;
-  }
-  
-  p, a, li, button, ul {
-    margin: 0;
-    padding: 0;
-    line-height: normal;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    text-decoration: none;
-  }
-  
-  img {
-    width: 100%;
-    height: auto;
-  }
-  
-  button {
-    border: 0;
-    background-color: transparent;
-  }
-  
-  input:focus, textarea:focus, select:focus {
-    outline: none;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 75px;
+}
+
+@import '~mdb-ui-kit/css/mdb.min.css';
+
+body {
+  font-weight: 400;
+  overflow-x: hidden;
+  position: relative;
+  background-color: black !important;
+  color: #fff !important;
+  font-family: 'Centra', sans-serif !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+}
+
+p,
+a,
+li,
+button,
+ul {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+button {
+  border: 0;
+  background-color: transparent;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
+}
